tests/test_files_pa3/errors/UnaryOpsBad.ic
class A
{
	
	static void main(string[] args) { }

	int ints(int x)
	{
		int z;
		boolean b;
		string s;
		
		b = -x;
		s = -x;
		z = 
			-b;
		z = 
			-s;
		
		return z;
	}
}

class B
{

	boolean booleans(boolean x)
	{
		int z;
		boolean b;
		string s;
		
		z = !x;
		s = !x;
		b = 
			!z;
		b = 
			!s;
		
		return b;
	}
}